<resources>
    <string name="app_name">Login&amp;Subscription</string>
    <string name="email">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="createAccount">アカウント登録</string>
    <string name="confirmPassword">パスワード確認</string>
    <string name="logout">ログアウト</string>
    <string name="googleLogin">GOOGLE</string>
    <string name="revokeAccess">アカウント削除</string>
    <string name="emailCheck">メールアドレスの形式が正しくありません。</string>
    <string name="passwordMoreThan6">6文字以上のパスワード作成が必要。</string>
    <string name="passwordCheck">パスワードが一致しません。</string>
    <string name="subscription">会員登録</string>
    <string name="subscriptionState">SUB :</string>
    <string name="reloadButton">リロード</string>
</resources>