<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/checkEmailNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailCheck"
            android:textColor="#FF0000"
            android:visibility="invisible" />

    </LinearLayout>


    <EditText
        android:id="@+id/createEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/passwordMoreThan6Notice"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordMoreThan6"
            android:textColor="#FF0000"
            android:visibility="invisible" />
    </LinearLayout>


    <EditText
        android:id="@+id/createPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/confirmPasswordNotice"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordCheck"
            android:textColor="#FF0000"
            android:visibility="invisible" />

    </LinearLayout>


    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/createAccountButton"
        android:text="@string/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>